# scrapping-service

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker.yml
.qwen/skills/auto-skill-debug-eof-errors/: SKILL.md
app/: main.py  run.py
app/api/: dependencies.py  routes.py
app/auth/: __init__.py  models.py  resolver.py
app/cache/: __init__.py  maintenance.py  models.py  sqlite_cache.py
app/core/: config.py  errors.py  logging.py  security.py
app/jobs/: __init__.py  models.py  service.py
app/metrics/: prometheus.py
app/schemas/: health.py  scrape.py
app/scraper/: browser_fetcher.py  browser_pool.py  domain_policy.py  extractor.py  html_normalizer.py  http_fetcher.py  normalizer.py  response_processing.py  service.py
configs/: config.example.yaml
remote/: scraper-api.container
scripts/: debug-eof.sh  deploy.sh  smoke-test.sh
tests/: conftest.py  test_api.py  test_auth_profiles.py  test_browser_pool.py  test_cache.py  test_cache_cleanup.py  test_config.py  test_dependencies.py  test_domain_policy.py  test_errors.py  test_extraction.py  test_html_normalizer.py  test_jobs.py  test_logging.py  test_metrics.py  test_normalizer.py  test_proxy.py  test_security.py
